--- a/CheckExchangeRate/Podfile
+++ b/CheckExchangeRate/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 target 'CheckExchangeRate' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -7,6 +7,7 @@ target 'CheckExchangeRate' do
 
   # Pods for CheckExchangeRate
   pod 'RealmSwift'
+  pod 'R.swift'
 
   target 'CheckExchangeRateTests' do
     inherit! :search_paths
